- STARKA-163 Use indel error estimates to improve indel candidate selection
- STARKA-179 Provide config option for somatic callability track 
- STARKA-178 Consolidate single strelka config for all aligners
- Expand random forest tree count in somatic SNV VQSR
v2.2.2
- STARKA-175 Update somatic SNV VQSR model to include MAPQ0 with improved
normalization
- STARKA-176 Prevent large deletions from locking indels outside of the 
realignment buffer.
- STARKA-174 Prevent segfault due to libstdc++ bug in certain gcc versions 
v2.2.1
- STARKA-170 Add "--exome" config option for starling/strelka
v2.2.0
- STARKA-166 add binomial-distribution-based allele bias predictors for Starling VQSR models
- STARKA-165 patch LOH artifact in somatic VQSR output
- STARKA-162 revise depth normalization in Starling VQSR
- STARKA-161 refine somatic VQSR settings
- STARKA-158 generalize gvcf nocompress to support regions/compression/tabix index
- STARKA-155 add ploidy specification via bedfile (supporting haploid and deleted states only_
- STARKA-151 add VQSR model trained using RefError*100 and median of chromosome means for depth normalization
- STARKA-152 add ref indel error multiplier to reduce undercalling of homozygous indels
- STARKA-148 add support for hetalt ins and del VQSR models to starling
- STARKA-149 fix Qrule/default filtering being applied even when a VQSR model is specified; also remove some special-case scoring
- STARKA-150 allow tabs as separators in scoring model (model.json) file
- Extend address sanitizer build support, improve build option checks
- STARKA-144 add initial site-noise strelka feature
- STARKA-73 add strelka noise extractor workflow
- STARKA-143 Improve runtime for high-depth centromere regions, especially for strelka
- Add starling option to always genotype indels provided in vcf
- STARKA-135 add strand bias feature
- STARKA-138 add read position features to strelka SNV output
- STARKA-136 add mapping info values to strelka SNV output
v2.1.5