@@ -124,7 +124,7 @@ struct somatic_indel_caller_grid : private boost::noncopyable
                       somatic_indel_call& sindel) const;
 
     void
-    set_normal_prior(std::vector<blt_float_t> & normal_prior,
+    set_normal_prior(std::vector<blt_float_t>& normal_prior,
                      const double ref_error_prob,
                      const strelka_options& opt) const;
 
